<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.HomeFragment">

    <TextView
        android:id="@+id/tv_title_up"
        style="@style/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_title_down"
        android:textSize="@dimen/_25sdp"
        android:gravity="start"
        android:layout_marginStart="@dimen/_20ssp"
        style="@style/tv_list_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/converter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_up"
        />

    <TextView
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/bg_progress"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_20ssp"
        android:gravity="start"
        android:text="@string/from"
        app:layout_constraintBottom_toTopOf="@+id/ll_from_currency"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_down" />
    <LinearLayout
        android:id="@+id/ll_from_currency"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_from">

        <TextView
            android:id="@+id/tv_from_currency"
            style="@style/tv_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/default_currency"
            app:drawableEndCompat="@drawable/ic_down" />

        <EditText
            android:id="@+id/et_currency"
            style="@style/tv_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="no"
            android:background="@android:color/transparent"
            android:hint="@string/_0"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1" />

    </LinearLayout>

    <View
        android:id="@+id/view_one"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1ssp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_from_currency" />

    <TextView
        android:id="@+id/tv_from_curr_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="end"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_from_currency" />

    <TextView
        android:id="@+id/tv_to"
        android:gravity="start"
        android:layout_marginStart="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/bg_progress"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_from_curr_rate"
        />

    <LinearLayout
        android:id="@+id/ll_to_currency"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_to">

        <TextView
            android:id="@+id/tv_to_currency"
            style="@style/tv_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/default_currency"
            app:drawableEndCompat="@drawable/ic_down" />

        <TextView
            android:id="@+id/tv_converted_currency"
            style="@style/tv_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="no"
            android:background="@android:color/transparent"
            android:hint="@string/_0"
            android:maxLength="10"
            android:maxLines="1" />
    </LinearLayout>

    <View
        android:id="@+id/view_two"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1ssp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_to_currency" />

    <TextView
        android:id="@+id/tv_to_curr_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="end"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_two" />

</androidx.constraintlayout.widget.ConstraintLayout>